--- a/com.att/pom.xml
+++ b/com.att/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>com.att</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.Team5</groupId>
+            <artifactId>com.Generic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
